# app/controllers/users_controller.rb
@@ -2,6 +2,7 @@ class UsersController < ApplicationController
   include Pundit::Authorization
   include JSONAPI::Filtering
   include JSONAPI::Errors
+  include JSONAPI::Deserialization
 
   before_action :set_user, except: :index
 
@@ -21,6 +22,18 @@ class UsersController < ApplicationController
     @user.destroy
 
     render jsonapi: @user
+  end
+
+  def archive
+    if @user.update(jsonapi_deserialize(params, only: :archived))
+      if @user.saved_change_to_archived?
+        render jsonapi: @user
+      else
+        render json: { errors: [{ status: "422", title: "Unprocessable Change", error: "You cannot archive an archived user" }] }, status: :unprocessable_entity 
+      end
+    else
+      render jsonapi_error: @user.errors
+    end
   end
 
   private
